tests/sumo/errors/routes/emptyroute_newstyle_plainemission/errors.sumo
Error: Attribute 'edges' in definition of route '!0' is empty.
Error: The route for vehicle '0' has no edges.
Quitting (on error).
